--- a/exercises/practice/bob/.meta/config.json
+++ b/exercises/practice/bob/.meta/config.json
@@ -1,6 +1,16 @@
 {
   "blurb": "Bob is a lackadaisical teenager. In conversation, his responses are very limited.",
-  "authors": [],
+  "authors": [
+    "Gaelan"
+  ],
+  "contributors": [
+    "aimorris",
+    "austinlyons",
+    "bistik",
+    "kytrinyx",
+    "lorenzleutgeb",
+    "rootulp"
+  ],
   "files": {
     "solution": [],
     "test": [],
