--- a/exercises/practice/trinary/.meta/config.json
+++ b/exercises/practice/trinary/.meta/config.json
@@ -1,6 +1,12 @@
 {
   "blurb": "Convert a trinary number, represented as a string (e.g. '102012'), to its decimal equivalent using first principles.",
   "authors": [],
+  "contributors": [
+    "aimorris",
+    "kytrinyx",
+    "rootulp",
+    "shidel-dev"
+  ],
   "files": {
     "solution": [],
     "test": [],
