--- a/exercises/practice/wordy/.meta/config.json
+++ b/exercises/practice/wordy/.meta/config.json
@@ -1,6 +1,14 @@
 {
   "blurb": "Parse and evaluate simple math word problems returning the answer as an integer.",
   "authors": [],
+  "contributors": [
+    "aimorris",
+    "Gaelan",
+    "kytrinyx",
+    "marocchino",
+    "rootulp",
+    "shidel-dev"
+  ],
   "files": {
     "solution": [],
     "test": [],
