--- a/config.json
+++ b/config.json
@@ -14,6 +14,9 @@
     "indent_style": "space",
     "indent_size": 4
   },
+  "test_runner": {
+    "average_run_time": 1.0
+  },
   "test_pattern": "spec.coffee",
   "files": {
     "solution": [
