--- a/config.json
+++ b/config.json
@@ -324,5 +324,16 @@
   },
   "concepts": [],
   "key_features": [],
-  "tags": []
+  "tags": [
+    "paradigm/declarative",
+    "paradigm/functional",
+    "paradigm/imperative",
+    "paradigm/object_oriented",
+    "typing/dynamic",
+    "typing/weak",
+    "execution_mode/interpreted",
+    "platform/web",
+    "used_for/frontends",
+    "used_for/web_development"
+  ]
 }
