--- a/exercises/practice/trinary/.meta/config.json
+++ b/exercises/practice/trinary/.meta/config.json
@@ -19,5 +19,5 @@
     ]
   },
   "source": "All of Computer Science",
-  "source_url": "http://www.wolframalpha.com/input/?i=binary&a=*C.binary-_*MathWorld-"
+  "source_url": "https://www.wolframalpha.com/examples/mathematics/numbers/base-conversions"
 }
