--- a/config.json
+++ b/config.json
@@ -26,7 +26,7 @@
       "%{kebab_slug}.spec.coffee"
     ],
     "example": [
-      "example.coffee"
+      ".meta/example.coffee"
     ],
     "exemplar": [
       ".meta/exemplar.coffee"
